--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,31 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400..700;1,400..700');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: white;
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  @apply text-[18px];
+  font-family: "Poppins", sans-serif!important;
+  font-weight: 400;
+  font-style: normal;
 }
 
-input {
-  @apply text-black;
+h1 {
+  @apply text-3xl font-bold;
+}
+
+p {
+  @apply text-neutral-500;
+}
+
+button, button[type="submit"] {
+  @apply py-2 px-6 rounded bg-purple-500 text-white font-normal text-sm cursor-pointer hover:scale-105 transition ease-in duration-300 shadow-md;
+}
+
+input[type="email"], select {
+  @apply border rounded px-2 py-1 max-w-[300px];
 }
